live-classes/kubernetes/learn-k8s/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  - name: frontend
    image: nginx:1.14.2
    ports:
    - containerPort: 80
