live-classes/kubernetes/learn-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 80
